--- a/assignment/Solutions_project.ipynb
+++ b/assignment/Solutions_project.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
      "output_type": "stream",
      "text": [
       "The start codon is ATG and starts at position 117480095\n",
-      "The stop codon is TAG and starts at position 117667106\n"
+      "The stop codon is GAG and starts at position 117667108\n"
      ]
     }
    ],
@@ -448,9 +448,9 @@
     "                transcript_id = li_attr[2].strip().split()[1].strip('\"')\n",
     "                if gene_id == \"ENSG00000001626\" and transcript_id == \"ENST00000003084\":\n",
     "                    if feature == 'start_codon':\n",
-    "                        start_codon = int(entries[3]) # save position for the start codon \n",
+    "                        pos_start_codon = int(entries[3]) # save position for the start codon \n",
     "                    elif feature == 'stop_codon':\n",
-    "                        stop_codon = int(entries[3]) # save position for the stop codon\n",
+    "                        pos_stop_codon = int(entries[3]) # save position for the stop codon\n",
     "\n",
     "\n",
     "\n",
@@ -463,12 +463,12 @@
     "    chr7 = \"\".join(seqList) # join all DNA fragments from the seqList to one string\n",
     "\n",
     "\n",
-    "if chr7[start_codon-1:start_codon+2] == \"ATG\":\n",
+    "if chr7[pos_start_codon-1:pos_start_codon+2] == \"ATG\":\n",
     "    print(\"The start codon is\", chr7[start_codon-1:start_codon+2], \"and starts at position\", start_codon)\n",
     "else:\n",
     "    print(\"The start codon is not ATG\")\n",
     "\n",
-    "if chr7[stop_codon-1:stop_codon+2] in [\"TAG\", \"TAA\", \"TGA\"]:\n",
+    "if chr7[pos_stop_codon-1:pos_stop_codon+2] in [\"TAG\", \"TAA\", \"TGA\"]:\n",
     "    print(\"The stop codon is\", chr7[stop_codon-1:stop_codon+2], \"and starts at position\", stop_codon)\n",
     "else:\n",
     "    print(\"The stop codon does not correspond to a proper stop codon\")"
@@ -482,6 +482,13 @@
     "\n",
     "strand is all positive for this transcript. For more robust code, you also need to think about the translation direction."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
