--- a/assignment/Solutions_project.ipynb
+++ b/assignment/Solutions_project.ipynb
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'gene_id': 'ENSG00000001626', 'gene_version': '14', 'transcript_id': 'ENST00000546407', 'transcript_version': '1', 'gene_name': 'CFTR', 'gene_source': 'ensembl_havana', 'gene_biotype': 'protein_coding', 'transcript_name': 'CFTR-207', 'transcript_source': 'havana', 'transcript_biotype': 'processed_transcript', 'transcript_support_level': '1'}\n"
+      "{'gene_id': 'unkown gene', 'gene_version': '14', 'transcript_id': 'ENST0000   0546407', 'transcript_version': '1', 'gene_name': 'CFTR', 'gene_source': 'ensembl_havana', 'gene_biotype': 'protein_coding', 'transcript_name': 'CFTR-207', 'transcript_source': 'havana', 'transcript_biotype': 'processed_transcript', 'transcript_support_level': '1'}\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
     "    li_attr = [x.strip() for x in attribute.split(';') if x.strip()]\n",
     "    d_attr = {}\n",
     "    for attr in li_attr:\n",
-    "        key_and_value = attr.split(' ')\n",
+    "        key_and_value = attr.split(' ', maxsplit=1)\n",
     "        if (len(key_and_value) < 2):\n",
     "            print(key_and_value)\n",
     "        key = key_and_value[0]\n",
@@ -113,7 +113,7 @@
     "    return d_attr\n",
     "\n",
     "# for example, \n",
-    "attribute = 'gene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000546407\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-207\"; transcript_source \"havana\"; transcript_biotype \"processed_transcript\"; transcript_support_level \"1\";'\n",
+    "attribute = 'gene_id \"unkown gene\"; gene_version \"14\"; transcript_id \"ENST0000   0546407\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-207\"; transcript_source \"havana\"; transcript_biotype \"processed_transcript\"; transcript_support_level \"1\";'\n",
     "d_attr = parse_attribute(attribute)\n",
     "print(d_attr)"
    ]
