--- a/lectures/Day_3.ipynb
+++ b/lectures/Day_3.ipynb
@@ -3092,19 +3092,21 @@
     }
    },
    "source": [
-    "## Day 3, Exercise 2\n",
+    "#### Lunch \n",
+    "___\n",
+    "## Afternoon session: \n",
+    "___\n",
+    "### Day 3, Exercise 2 (30 min)\n",
     "- Link: https://python-bioinfo.bioshu.se/exercises.html\n",
     "___\n",
-    "##### Break\n",
-    "___\n",
     "\n",
-    "### Quiz for Day 3\n",
+    "### Quiz for Day 3 (15 min)\n",
     "- Link: https://python-bioinfo.bioshu.se/quiz.html\n",
     "___\n",
     "\n",
-    "### Lunch \n",
+    "\n",
     "___\n",
-    "## Project time after lunch"
+    "## Project time"
    ]
   }
  ],
