--- a/assignment/Solutions_project.ipynb
+++ b/assignment/Solutions_project.ipynb
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -709,15 +709,8 @@
     "            attribute = entries[8]\n",
     "            d_attr = parse_attribute(attribute)\n",
     "            \n",
-    "            if \"gene_id\" in d_attr:\n",
-    "                gene_id = d_attr['gene_id']\n",
-    "            else:\n",
-    "                gene_id = \"\"\n",
-    "\n",
-    "            if \"transcript_id\" in d_attr:\n",
-    "                transcript_id = d_attr['transcript_id']\n",
-    "            else:\n",
-    "                transcript_id = \"\"\n",
+    "            gene_id = d_attr.get(\"gene_id\", \"\")\n",
+    "            transcript_id = d_attr.get(\"transcript_id\", \"\")\n",
     "                \n",
     "            if gene_id == \"ENSG00000001626\" and transcript_id == \"ENST00000003084\":\n",
     "                # print('strand=',strand)\n",
